src/test/ui/async-await/no-non-guaranteed-initialization.stderr
error[E0381]: used binding `y` isn't initialized in all conditions
  --> $DIR/no-non-guaranteed-initialization.rs:9:5
   |
LL |     let y;
   |         - binding declared here but left uninitialized
LL |     if x > 5 {
   |        ----- this `if` expression might be missing an `else` arm that initializes `y`
...
LL |     y
   |     ^ `y` used here but it isn't initialized in all conditions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
